# sujudsense

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  chainlit.md  config.py  engine.py  logger.py  pyproject.toml  safety.py  spaces.yaml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
data/: biomechanics.txt  fiqh.txt
public/: analytics.js
tests/: test_evaluation.py
