[project]
name = "sujudsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "textloader>=0.0.9",
]
